Bug 1517197. Fix SVG masking and clipping regression. r=mattwoodrow, a=RyanVM

This Make nsSVGIntegrationUtils::AdjustInvalidAreaForSVGEffects return the
original area if there are no filter effects (instead of using some bogus
fallback code).

Differential Revision: https://phabricator.services.mozilla.com/D16516