layout/svg/nsSVGIntegrationUtils.cpp
@@ -310,7 +310,6 @@ nsIntRegion nsSVGIntegrationUtils::AdjustInvalidAreaForSVGEffects(
     return nsIntRect();
   }
 
-  int32_t appUnitsPerDevPixel = aFrame->PresContext()->AppUnitsPerDevPixel();
   nsIFrame* firstFrame =
       nsLayoutUtils::FirstContinuationOrIBSplitSibling(aFrame);
 
@@ -321,17 +320,10 @@ nsIntRegion nsSVGIntegrationUtils::AdjustInvalidAreaForSVGEffects(
   if (!aFrame->StyleEffects()->HasFilters() ||
       SVGObserverUtils::GetFiltersIfObserving(firstFrame, nullptr) ==
           SVGObserverUtils::eHasRefsSomeInvalid) {
-    // The frame is either not there or not currently available,
-    // perhaps because we're in the middle of tearing stuff down.
-    // Be conservative, return our visual overflow rect relative
-    // to the reference frame.
-    // XXX we may get here purely due to an SVG mask, in which case there is
-    // no need to do this it causes over-invalidation. See:
-    // https://bugzilla.mozilla.org/show_bug.cgi?id=1494110
-    // Do we still even need this for filters? If so, why?
-    nsRect overflow = aFrame->GetVisualOverflowRect() + aToReferenceFrame;
-    return overflow.ToOutsidePixels(appUnitsPerDevPixel);
+    return aInvalidRegion;
   }
+
+  int32_t appUnitsPerDevPixel = aFrame->PresContext()->AppUnitsPerDevPixel();
 
   // Convert aInvalidRegion into bounding box frame space in app units:
   nsPoint toBoundingBox =
